FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(Matuna.MNISTSample1 ${sources_SRCS})
TARGET_LINK_LIBRARIES(Matuna.MNISTSample1 Matuna.OCLConvNet Matuna.ConvNet Matuna.Math)
SET_TARGET_PROPERTIES(Matuna.MNISTSample1 PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(Matuna.MNISTSample1 PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "Matuna.MNISTSample1" CLEAN_DIRECT_OUTPUT 1)

#Install directives

