FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(CNNLayerInterlockTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(CNNLayerInterlockTest CNN)
SET_TARGET_PROPERTIES(CNNLayerInterlockTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNNLayerInterlockTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNNLayerInterlockTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

