FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(ConvNetLayerInterlockTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(ConvNetLayerInterlockTest ConvNet)
SET_TARGET_PROPERTIES(ConvNetLayerInterlockTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(ConvNetLayerInterlockTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "ConvNetLayerInterlockTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

