FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(CNNOCLInitializationTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(CNNOCLInitializationTest CNNOCL CNN OCLHelper)
SET_TARGET_PROPERTIES(CNNOCLInitializationTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNNOCLInitializationTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNNOCLInitializationTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

