FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(CNNOpenCLInitializationTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(CNNOpenCLInitializationTest CNNOpenCL CNN OpenCLHelper)
SET_TARGET_PROPERTIES(CNNOpenCLInitializationTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(CNNOpenCLInitializationTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "CNNOpenCLInitializationTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

