FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(ConvolutionKernelTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(ConvolutionKernelTest CNNOpenCL CNN Math)
SET_TARGET_PROPERTIES(ConvolutionKernelTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(ConvolutionKernelTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "ConvolutionKernelTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

