FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(LayerInterlockTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(LayerInterlockTest CNN)
SET_TARGET_PROPERTIES(LayerInterlockTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(LayerInterlockTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "LayerInterlockTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

