FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(MathMatrixTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(MathMatrixTest Math)
SET_TARGET_PROPERTIES(MathMatrixTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(MathMatrixTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "MathMatrixTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

