FILE (GLOB_RECURSE sources_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

ADD_EXECUTABLE(MatrixTest ${sources_SRCS})
TARGET_LINK_LIBRARIES(MatrixTest Math)
SET_TARGET_PROPERTIES(MatrixTest PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(MatrixTest PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME "MatrixTest" CLEAN_DIRECT_OUTPUT 1)

#Install directives

